--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -7,7 +7,6 @@ html {
   box-sizing: border-box;
 }
 *, *:before, *:after {
-  box-sizing: inherit;
 }
 
 /*
@@ -18,6 +17,17 @@ body {
   margin: 0;
   color: #244751;
   background-color: #eee;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+main {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 450px;
+  margin-top: 140px;
+  background-color: white;
+  padding: 40px 50px 100px 50px
 }
 
 /*
